# cool-names

./: .gitignore  Cargo.toml  Dockerfile  README.md  adjectives.txt  deploy.sh  nouns.txt
.claude/: settings.local.json
src/: lib.rs  main.rs
src/adapters/: http.rs  mod.rs
src/application/: mod.rs  name_generator_service.rs
src/domain/: entities.rs  mod.rs  ports.rs
src/infrastructure/: file_word_repository.rs  mod.rs
static/: index.html
tests/: integration_test.rs
