[package]
name = "cool-names"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }
rand = "0.9.2"
thiserror = "2.0.17"
serde = { version = "1.0", features = ["derive"] }
tower = { version = "0.5.2", features = ["util"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
